--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-scrollmagic": "^2.2.0",
     "react-swipe": "^6.0.4"
   },
   "devDependencies": {
