--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-sitemap": "^2.4.13",
-    "gatsby-plugin-snipcart": "^1.1.2",
+    "gatsby-plugin-snipcart-advanced": "^1.0.2",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-source-wordpress": "^3.3.34",
     "gatsby-transformer-sharp": "^2.5.15",
