--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^3.1.1",
     "gatsby": "^2.24.61",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-preload-fonts": "^1.7.0",
