--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-preload-fonts": "^1.7.0",
     "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-sitemap": "^2.4.13",
